<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.baibus.medicalaccreditation.auth.RegistrationVM"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.baibus.medicalaccreditation.auth.AuthActivity"
        tools:showIn="@layout/activity_auth">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:animatedVisibility="@{viewModel.isShowProgress ? view.GONE : view.VISIBLE}"
                tools:visibility="visible">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}"
                        android:maxLines="1"
                        app:onEditorActionListener="@{viewModel}"
                        app:errorText="@{viewModel.emailError}"
                        tools:text="email"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_name"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.name}"
                        android:maxLines="1"
                        app:onEditorActionListener="@{viewModel}"
                        app:errorText="@{viewModel.nameError}"
                        tools:text="name"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        android:maxLines="1"
                        app:errorText="@{viewModel.passwordError}"
                        tools:text="password"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/edit_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_passwordConfirm"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_registration_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:text="@={viewModel.passwordConfirm}"
                        android:maxLines="1"
                        app:errorText="@{viewModel.passwordConfirmError}"
                        tools:text=""/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:gravity="end">
                    <Button
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/action_registration"
                        android:textStyle="bold"
                        android:minEms="6"
                        app:onClick="@{() -> viewModel.attemptRegistration()}"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:animatedVisibility="@{viewModel.isShowProgress ? view.VISIBLE : view.GONE}"
            tools:visibility="visible"/>

    </FrameLayout>

</layout>
